# MLOps_Tutorials

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dashboard-adminuser.yaml  data.dvc  docker-compose.yml  main.py  profile_report.html  pyproject.toml  requirements.txt  setup.py  story.db
.dvc/: config
.github/workflows/: deploy.yml  simple_workflow.yml  test1.yml  test2.yml  test2yml  test3.yml  test3a.yml
data/: .gitignore
docker/docker_notes/: README_templates.md
docker/k8s_notes/: app_1_deployment.yaml  app_2_deployment.yaml  main_config.yaml  secrets.yaml
docker_notes/: README.md  README_templates.md
envs_dir/: service_2.env
go_lang/: 01_intro.go  README.md
k8s_notes/: README.md  app_1_deployment.yaml  app_1_service.yaml  app_2_service.yaml  deployment.yaml  main_config.yaml  mongo_deployment.yaml  mongo_service.yaml  secrets.yaml  service.yaml
k8s_notes/k8s_KIND/: README.md
main/: README.md  main.go
main/controlFlow/: 01_ex_1.go
main/goTutorials/: 01_intro.go  02-arrays.go  02-data-types.go  02-slices.go  02_ex_2.go  03-slices.go  03_ex_3.go  04-maps.go  04-struct-02.go  05-struct.go  06-struct.go  README.md
ml_testing/: README.md  differential_test.py
my-app/: main.py  pyproject.toml  story.db  test.db
other/: .dockerignore  Dockerfile  app.py  get_database.py  requirements.txt  schema.py
other_notes/AWS_GCP_notes/: README.md
other_notes/AWS_notes/: README.md
other_notes/Alembic_notes/: README.md
other_notes/Automations/DVC/: .dockerignore  Makefile  Makefile.prod  README.md  docker-compose.prod.yaml  docker-compose.yaml  dvc.yaml  lab.ipynb  mlruns.db  params.yaml  pyproject.toml  utils.py
other_notes/Automations/DVC/.envs/: .mlflow-dev  .mlflow-prod  .mlflow.dev  .postgres  example.mlflow.prod
other_notes/Automations/DVC/data/: .gitignore  titanic_data.csv.dvc
other_notes/Automations/DVC/data/artifacts/: .gitignore
other_notes/Automations/DVC/data/models/: .gitignore
other_notes/Automations/DVC/docker/: Dockerfile  Dockerfile.prod  run-server.prod.sh  run-server.sh
other_notes/Automations/DVC/scripts/: create-server.sh  startup-script.sh
other_notes/Automations/DVC/src/: evaluate.py  lab.ipynb  logger.py  mlflow_example.py  prepare_data.py  prepare_features.py  test.py  tmp.txt  train.py  utils.py
other_notes/BENTO_ML/: README.md  bentofile.yaml  eval.py  main.py  params.yaml  prepare_data.py  prepare_features.py  pyproject.toml  service.py  train.py  utils.py
other_notes/DSA/: 01-linkedListAndDoublyLinkedLab.ipynb  README.md
other_notes/Dask/: 01-getting_started.ipynb  01-getting_started.py  README.md  utils.py
other_notes/Docling/: main.py
other_notes/FastAPI/: README.md  app.py
other_notes/Github_actions/: README.md
other_notes/LLMOps/: INTRO_TO_LLMs.md
other_notes/LangChain/: README.md
other_notes/MCP/: 01_ex.py  02_client.py
other_notes/MLFlow/: AWS_SETUP_README.md  GCP_SETUP_README.md  LOCAL_MLFLOW_SETUP.md  README.md  README_AWS_SETUP.md
other_notes/ML_Algorithms/: README.md
other_notes/ONNX/: README.md
other_notes/ONNX/GLiNER/: 0-lab.ipynb  README.md  pyproject.toml
other_notes/Poetry/: README.md
other_notes/Python-classes/: README.md
other_notes/Python_classes_notes/: README-fastAPI-auth.md  README.md
other_notes/Python_tutorial/: README.md
other_notes/RabbitMQ/: README.md  new_task.py  send.py  utilities.py  worker.py
other_notes/sql/: README.md
spark_notes/: 00_.ipynb  01_feat_eng.ipynb  README.md
src/: core.py  settings.py  utilities.py
tests/: conftest.py  test_1.py  test_endpoints.py  test_feat_eng.py
(+188 files in other folders)
