[project]
name = "mlops-tutorials"
version = "0.1.0"
description = "Repository for MLOps and other tutorials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "polars>=1.32.2",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nb-black-formatter>=1.0.1",
    "pandas>=2.3.1",
]
