[project]
name = "mlops-tutorials"
version = "0.1.0"
description = "Repository for MLOps and other tutorials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "ddgs>=9.8.0",
    "fastapi>=0.121.2",
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "markdownify>=1.2.0",
    "numpy>=2.3.2",
    "polars>=1.32.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
    "rich>=14.1.0",
    "scalene>=1.5.55",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nb-black-formatter>=1.0.1",
    "pandas>=2.3.1",
]
