[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Chinedu Ezeofor <Chineiduezeofor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
rich = "^13.7.0"
typeguard = "^4.1.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
