[project]
name = "gliner-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gliner>=0.2.22",
    "numpy>=2.3.4",
    "onnxscript>=0.5.6",
    "rich>=14.2.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nb-black-formatter>=1.0.1",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]
